--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -24,7 +24,7 @@
 				</div>
 
 				<div class ="container" id="output">
-					<div class="output" id="text"></div>
+					<div class="output" id="text-output"></div>
 					<div class="output" id="graph">
 						<div class="buttons" id="buttons"></div>
 						<div class="graph" id="cy"></div>
