--- a/public/index.html
+++ b/public/index.html
@@ -3,24 +3,28 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="gruvbox.css">
+		<script src="https://kit.fontawesome.com/c72bec4d11.js" crossorigin="anonymous"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="js/cytoscape.js"></script>
 		<script src="js/test.js"></script>
 		<title>EMC</title>
 	</head> 
 	<body>
-		<header><h1>Epistemic Model Checker</h1></header>
+		<div class="box">
+			<header>
+				<h1>Epistemic Model Checker</h1>
+			</header>
 			<main id="main">
 				<div class="container" id="input">
-					<div id="formula-input">
-						<label>Formula:</label>
-						<input type ="text" id="formula" name="formula" required>
-						<button type ="reset">Reset</button>
-						<button id="formula-button" type="submit" onclick="send_formula()">Submit</button>
-					</div>
-					<div id="input-container">
-						<input type="file" name="modelfile" onChange='upload_file()'id="modelfile">
-					</div>
+					<input type ="text" id="formula" name="formula"  placeholder="Ka(p&&q) => (Kap&&Kaq)">
+					<button class="clicky" type="submit" onclick="send_formula()">
+						<i class="fa-solid fa-play" style="color: #eeeeec;"></i>
+						Run
+					</button>
+					<button class="clicky" type="submit" onclick="send_formula()">
+						<i class="fa-solid fa-arrow-up-from-bracket" style="color: #f3f3f3;"></i>
+					</button>
 				</div>
 
 				<div class ="container" id="output">
@@ -33,6 +37,7 @@
 
 				<!-- <div class="block" id="graphic-content">Graph output</div>   -->
 			</main>
+		</div>
 	</body>
 </html>
 
