--- a/public/index.html
+++ b/public/index.html
@@ -7,37 +7,44 @@
 		<script src="https://kit.fontawesome.com/c72bec4d11.js" crossorigin="anonymous"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="js/cytoscape.js"></script>
+		<script src="js/cytoscape-d3-force.js"></script>
 		<script src="js/test.js"></script>
 		<title>EMC</title>
 	</head> 
 	<body>
-		<div class="box">
+		<div class="shadow-box">
 			<header>
 				<h1>Epistemic Model Checker</h1>
 			</header>
 			<main id="main">
 				<div class="container" id="input">
 					<input type ="text" id="formula" name="formula"  placeholder="Ka(p&&q) => (Kap&&Kaq)">
-					<button class="clicky" type="submit" onclick="send_formula()">
-						<i class="fa-solid fa-play" style="color: #eeeeec;"></i>
-						Run
-					</button>
-					<button class="clicky" type="submit" onclick="send_formula()">
-						<i class="fa-solid fa-arrow-up-from-bracket" style="color: #f3f3f3;"></i>
-					</button>
-				</div>
-
-				<div class ="container" id="output">
-					<div class="output" id="text-output"></div>
-					<div class="output" id="graph">
-						<div class="buttons" id="buttons"></div>
-						<div class="graph" id="cy"></div>
+					<div class="input-button">
+						<input type="button" id="run-button" onclick="send_formula()" class="button">
+						<label for="run-button" id="run">
+							<i class="fa-solid fa-play"></i>
+						</label>
+					</div>
+					<div class="input-button">
+						<input type="file" id="file" class="button" onChange="upload_file()">
+						<label for="file">
+							<i class="fa-solid fa-arrow-up-from-bracket"></i>
+						</label>
 					</div>
 				</div>
 
-				<!-- <div class="block" id="graphic-content">Graph output</div>   -->
+				<div class ="output">
+					<div class="box" id="text-output"></div>
+					<div class="wrapper">
+						<div class="tabs" id="tabs"></div>
+						<div class="box">
+							<div class="graph" id="cy"></div>
+						</div>
+					</div>
+				</div>
+
 			</main>
-		</div>
+
 	</body>
 </html>
 
