fix multiples upload

--- a/public/index.html
+++ b/public/index.html
@@ -26,14 +26,12 @@
 						</label>
 					</div>
 					<div class="input-button">
-						<input type="file" id="file" class="button" onChange="upload_file()">
+						<input type="file" id="file" class="button" onchange="upload_file()">
 						<label for="file">
 							<i class="fa-solid fa-arrow-up-from-bracket"></i>
 						</label>
 					</div>
-					<div class="input-button" id="switch">
-						<input id="keyboard-checkbox" type="checkbox" onchange="toggleKeyboard()">
-					</div>
+					<input id="keyboard-checkbox" type="checkbox" onchange="toggleKeyboard()">
 				</div>
 				<div class="base" style="display: none;">
 					<div class="line1">
