--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="style.css">
-		<link rel="stylesheet" href="gruvbox.css">
 		<script src="https://kit.fontawesome.com/c72bec4d11.js" crossorigin="anonymous"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="dist/jquery.caret.js"></script>
@@ -78,7 +77,9 @@
 				</div>
 
 				<div class ="output">
-					<div class="box" id="text-output"></div>
+					<div class="wrapper">
+						<div class="box" id="text-output"></div>
+					</div>
 					<div class="wrapper">
 						<div class="tabs" id="tabs"></div>
 						<div class="box">
